# infection-spread-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  generate.py  log.txt  people.txt
generator/: main.cpp
include/: infection_simulation.h  person.h
logs/: client_info
src/: infection_simulation.cpp  main.cpp  person.cpp
